--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navigation-Bar -->
-    <nav class="mx-12 sm:justify-center sm:items-center">
+    <nav class="sm:mx-6 lg:mx-12 sm:justify-center sm:items-center">
         <div class="navbar bg-[#e8fbd6] rounded-lg mt-1 px-3 ">
             <div class="navbar-start">
               <div class="dropdown">
@@ -81,7 +81,7 @@
           </div>
     </nav>
     <!-- Main cection -->
-     <main class=" mx-12 mt-36 sm:items-center">
+     <main class="sm:mx-5 lg:mx-12 mt-36 sm:items-center">
         <!-- flex grid lg:grid-cols-4 gap-12 justify-between flex-wrap md:grid-cols-2 sm:grid-cols-1 gap-y-12 -->
         <!-- card section -->
          <section class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-5 justify-between     flex-wrap md:grid-cols-2 sm:grid-cols-1 gap-y-12">
