--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <ul
                   tabindex="0"
                   class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                  <li id="manSection"><a>man</a></li>
-                  <li id="womanSection"><a>Woman</a></li>
+                  <li id="manSection"><a>Men</a></li>
+                  <li id="womanSection"><a>Women</a></li>
                 </ul>
               </div>
             </div>
@@ -80,8 +80,10 @@
             </div>
           </div>
     </nav>
+    <!-- parson section -->
+     <div class="text-center justify-normal items-center text-green-600 text-5xl font-bold mt-8">Home Fashion</div>
     <!-- Main cection -->
-     <main class="sm:mx-5 lg:mx-12 md:mx-8 mt-36 sm:items-center">
+     <main class="sm:mx-5 lg:mx-12 md:mx-8 mt-32 sm:items-center">
         <!-- flex grid lg:grid-cols-4 gap-12 justify-between flex-wrap md:grid-cols-2 sm:grid-cols-1 gap-y-12 -->
         <!-- card section -->
          <section class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-5 justify-between     flex-wrap md:grid-cols-2 sm:grid-cols-1 gap-y-12">
