--- a/woman.html
+++ b/woman.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navigation-Bar -->
-    <nav class="sm:mx-6 lg:mx-12 md:mx-8 mx-12 sm:justify-center sm:items-center">
+    <nav class="sm:mx-6 lg:mx-12 md:mx-8 sm:justify-center sm:items-center">
         <div class="navbar bg-[#e8fbd6] rounded-lg mt-1 px-3 ">
             <div class="navbar-start">
               <div class="dropdown">
@@ -31,8 +31,8 @@
                 <ul
                   tabindex="0"
                   class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                  <li id="homeSection1"><a>home</a></li>
-                  <li id="manSection"><a>man</a></li>
+                  <li id="homeSection1"><a>Home</a></li>
+                  <li id="manSection"><a>Men</a></li>
 
                 </ul>
               </div>
@@ -81,6 +81,8 @@
             </div>
           </div>
     </nav>
+    <!-- parson section -->
+    <div class="text-center justify-normal items-center text-green-600 text-5xl font-bold mt-8">Women Fashion</div>
     <!-- Main cection -->
      <main class="sm:mx-5 lg:mx-12 md:mx-8 mt-36 sm:items-center">
         <!-- flex grid lg:grid-cols-4 gap-12 justify-between flex-wrap md:grid-cols-2 sm:grid-cols-1 gap-y-12 -->
