--- a/index.html
+++ b/index.html
@@ -512,6 +512,44 @@
                   
                 </div>
               </div>
+                          <!-- car section 9 -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure>
+                <img
+                  src="homeImg/home9.jpg"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">
+                  Shoes!
+                  <div class="badge badge-secondary">NEW</div>
+                </h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="justify-between">
+                  <div class="justify-center items-center ">
+                      <h1 class="text-lg text-xl font-semibold">Price</h1>
+                      <h1 class="text-red-500 text-2xl font-bold">399$</h1>
+                  </div>
+                  <!-- bay now & add cart btn -->
+                  <div class="card-actions justify-center">
+                      <!-- Add to card now btn -->
+                      <button class="addToCardBtn btn">Add to card
+                          <svg class="w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="size-6">
+                              <path strokeLinecap="round" strokeLinejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                      </button>
+                                    <!--bay now btn  -->
+                      <button class="bayNowBtn btn">Bay Now
+                           <svg class="w-5" xmlns="http://www.w3.org/2000/ svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="size-6">
+                          <path strokeLinecap="round" strokeLinejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
+                        </svg>
+                        </button>
+                    </div>
+
+                </div>
+                
+              </div>
+            </div>
          </section>
      </main>
      <!-- footer section -->
